# new-world

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_REPORT.md  CODEBASE_AUDIT.md  GD_LEGACY_CLEANUP_PLAN.md  PROGRESS.md  README.md  apply_rc02.py  apply_rs02.py  authority_audit.md  authority_boundary_spec.md  boot_pipeline_map.md  bridge_boundary_enforcement.md  core_foundations_report.md  core_systems_validation.md  data_authority_report.md  ecs_architecture_report.md  gdscript_authority_map.md  gdscript_full_authority_scan.md  godot_authority_scan.md  legacy_cleanup_map.md  legacy_deletion_report.md  missing_core_systems_audit.md  performance_baseline.md  post_cutover_boot_validation.md  project.godot  repo_truth_map.md  runtime_registry_report.md  runtime_system_classification.md  runtime_system_map.md  runtime_system_registry_map.md  sim_bridge.gdextension  simulation_cutover_migration_plan.md  simulation_ownership_cutover_map.md  simulation_ownership_map.md  trait-effects-master-part1.md  trait-effects-master-part3.md  trait-effects-master-part4.md  (+29 more)
data/: AGENTS.md  (+13 more)
rust/: AGENTS.md  CLAUDE.md  Cargo.toml  worldsim.gdextension
rust/.cargo/: config.toml
rust/crates/sim-bridge/: AGENTS.md  CLAUDE.md  Cargo.toml
rust/crates/sim-bridge/src/: body_bindings.rs  debug_api.rs  lib.rs  locale_bindings.rs  narrative_display.rs  pathfinding_backend.rs  pathfinding_bindings.rs  pathfinding_core.rs  pathfinding_gpu.rs  runtime_bindings.rs  runtime_commands.rs  runtime_dict.rs  runtime_events.rs  runtime_queries.rs  runtime_registry.rs  runtime_system.rs  snapshot_buffer.rs  temperament_detail.rs  tile_info.rs  ws2_codec.rs
rust/crates/sim-bridge/src/ffi/: mod.rs  world_node.rs
rust/crates/sim-core/: AGENTS.md  CLAUDE.md  Cargo.toml
rust/crates/sim-core/benches/: material_benchmarks.rs
rust/crates/sim-core/src/: band.rs  building.rs  calendar.rs  causal_log.rs  children_index.rs  config.rs  effect.rs  enums.rs  ids.rs  influence_channel.rs  influence_grid.rs  item.rs  item_store.rs  lib.rs  room.rs  scales.rs  settlement.rs  temperament.rs  territory_grid.rs  tick_tier.rs  tile_grid.rs  wall_mask.rs
rust/crates/sim-core/src/causal/: event.rs  mod.rs  ring_buffer.rs  storage.rs
rust/crates/sim-core/src/components/: age.rs  agent.rs  agent_state.rs  behavior.rs  body.rs  body_health.rs  construction.rs  coping.rs  economic.rs  effect_flags.rs  emotion.rs  faith.rs  family.rs  hunger.rs  identity.rs  intelligence.rs  inventory.rs  knowledge.rs  llm.rs  memory.rs  mod.rs  needs.rs  personality.rs  position.rs  relationship.rs  settlement.rs  skills.rs  sleep.rs  social.rs  steering.rs  stress.rs  thirst.rs  traits.rs  values.rs  wildlife.rs
rust/crates/sim-core/src/influence/: blocking.rs  channel.rs  grid.rs  mod.rs  propagate.rs
rust/crates/sim-core/src/material/: category.rs  definition.rs  derivation.rs  error.rs  explanation.rs  id.rs  loader.rs  mod.rs  properties.rs  registry.rs  terrain.rs
rust/crates/sim-core/src/tile/: grid.rs  mod.rs
rust/crates/sim-core/src/world/: mod.rs  resource_map.rs  tile.rs
rust/crates/sim-core/tests/: material_harness.rs  material_loader_integration.rs
rust/crates/sim-data/: AGENTS.md  CLAUDE.md  Cargo.toml
rust/crates/sim-data/src/: attachment_config.rs  coping.rs  developmental_stages.rs  emotion_presets.rs  error.rs  lib.rs  loader.rs  mental_breaks.rs  mortality.rs  name_culture.rs  name_generator.rs  occupations.rs  personality_distribution.rs  registry.rs  species.rs  stressor_events.rs  tag_index.rs  tech.rs  trait_defs.rs  validator.rs  value_events.rs  values_seed.rs
rust/crates/sim-data/tests/: ron_registry_test.rs
rust/crates/sim-engine/: AGENTS.md  CLAUDE.md  Cargo.toml
rust/crates/sim-engine/src/: chronicle.rs  command.rs  engine.rs  event_bus.rs  event_store.rs  events.rs  explain_log.rs  frame_snapshot.rs  lib.rs  llm_prompt.rs  llm_server.rs  llm_validator.rs  llm_worker.rs  notification.rs  perf_tracker.rs  snapshot.rs  system_trait.rs
rust/crates/sim-engine/tests/: integration.rs
rust/crates/sim-systems/: AGENTS.md  CLAUDE.md  Cargo.toml
rust/crates/sim-systems/src/: body.rs  entity_spawner.rs  lib.rs  math_utils.rs  name_generator.rs  pathfinding.rs  runtime.rs  stat_curve.rs  values_init.rs
rust/crates/sim-systems/tests/: integration.rs
rust/crates/sim-test/: Cargo.toml  food-economy-result.md  harness_food_economy_result.md  harness_result_a8_temperament.md
rust/crates/sim-test/benches/: phase2_benchmarks.rs
rust/crates/sim-test/fixtures/: legacy_rooms_pre_ritual.json
rust/crates/sim-test/src/: lib.rs  main.rs
rust/crates/sim-test/tests/: harness_next_a_postverify.rs  harness_p10_alpha_settlement.rs  harness_p10_beta_settlement_system.rs  harness_p10_gamma_settlement_chronicle.rs  harness_p11_alpha_agent_renderer.rs  harness_p3_alpha_event_recording.rs  harness_p3_beta_causal_chain.rs  harness_p3_gamma_1_ffi.rs  harness_p3_gamma_2_alpha_locale_panel_scaffold.rs  harness_p3_gamma_2_beta_tile_click_chain.rs  harness_p4_alpha_agent_core.rs  harness_p4_beta_movement.rs  harness_p4_gamma_rendering.rs  harness_p5_alpha_agent_id_hunger.rs  harness_p5_beta_decision.rs  harness_p5_gamma_sleep_daynight_chronicle.rs  harness_p6_alpha_construction_components.rs  harness_p6_beta_construction_system.rs  harness_p6_gamma_construction_chronicle.rs  harness_p7_alpha_social_components.rs  harness_p7_beta_social_system.rs  harness_p7_delta_social_ui.rs  harness_p7_gamma_social_chronicle.rs  harness_p8_alpha_memory_components.rs  harness_p8_beta_memory_system.rs  harness_p8_delta_memory_ui.rs  harness_p8_gamma_memory_chronicle.rs  harness_p9_alpha_body_health.rs  harness_p9_beta_combat_system.rs  harness_p9_delta_combat_ui.rs  harness_p9_gamma_combat_chronicle.rs  harness_phase2.rs  harness_phase2_determinism.rs  harness_phase2_ffi.rs  harness_phase2_substantial.rs  harness_t7_10_a_warmth_wiring.rs  harness_t7_10_b1_light_viz_toggle.rs  harness_t7_10_b1_space_toggle.rs  harness_t7_10_b_light_shadowcast_wiring.rs  harness_t7_10_c_noise_linear_wiring.rs  (+5 more)
rust/tests/: data_loading_test.rs
(+1931 files in other folders)
