[workspace]
resolver = "2"
members = [
    "crates/sim-core",
]
exclude = []

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyunlord/new-world"
rust-version = "1.93"

[workspace.dependencies]
hecs = "0.10"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rayon = "1.10"
glam = "0.30"
ahash = "0.8"
thiserror = "1.0"
