[package]
name = "sim-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
gpu = []

[dependencies]
sim-core = { path = "../sim-core" }
sim-engine = { path = "../sim-engine" }
sim-systems = { path = "../sim-systems" }
sim-data = { path = "../sim-data" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fluent-bundle = { workspace = true }
unic-langid = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
crc32fast = { workspace = true }
godot = { workspace = true }

# sim-bridge needs unsafe for GDExtension FFI — override workspace deny
[lints.rust]
unsafe_code = "allow"
