[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
ordered-float = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
