[package]
name = "sim-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hecs = { workspace = true }
serde = { workspace = true }
glam = { workspace = true }
ron = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "material_benchmarks"
harness = false
