[package]
name = "sim-data"
version = "0.1.0"
edition = "2021"

[dependencies]
sim-core = { path = "../sim-core" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[lints]
workspace = true
