[package]
name = "sim-data"
version = "0.1.0"
edition = "2021"

[dependencies]
sim-core = { path = "../sim-core" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = "0.8"
serde_path_to_error = "0.1"
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
strum = { workspace = true }

[lints]
workspace = true
