[package]
name = "sim-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
sim-core = { path = "../sim-core" }
sim-data = { path = "../sim-data" }
hecs = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
minijinja = { workspace = true }
crossbeam-channel = { workspace = true }
nix = { workspace = true }

[lints]
workspace = true
