[package]
name = "sim-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sim-test"
path = "src/main.rs"

[dependencies]
sim-core = { path = "../sim-core" }
sim-engine = { path = "../sim-engine" }
sim-systems = { path = "../sim-systems" }
sim-data = { path = "../sim-data" }
sim-bridge = { path = "../sim-bridge" }
env_logger = { workspace = true }
log = { workspace = true }
ron = "0.8"
serde_json = { workspace = true }
hecs = { workspace = true }
nix = { workspace = true }

[lints]
workspace = true
