[package]
name = "sim-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldSim test harness — long-running simulation tests + integration scenarios"

[dependencies]
hecs = { workspace = true }
serde = { workspace = true }
sim-core = { path = "../sim-core" }
sim-engine = { path = "../sim-engine" }
sim-systems = { path = "../sim-systems" }
