[package]
name = "sim-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldSim test harness — long-running simulation tests + integration scenarios"

[dependencies]
hecs = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
sim-core = { path = "../sim-core" }
sim-engine = { path = "../sim-engine" }
sim-systems = { path = "../sim-systems" }
sim-bridge = { path = "../sim-bridge" }

[dev-dependencies]
criterion = { workspace = true }
serde_json = "1.0"

[[bench]]
name = "phase2_benchmarks"
harness = false
